JumpScript/tests/baselines/reference/typeParametersInStaticMethods.errors.txt
tests/cases/compiler/typeParametersInStaticMethods.jump(2,21): error TS2302: Static members cannot reference class type parameters.
tests/cases/compiler/typeParametersInStaticMethods.jump(2,37): error TS2302: Static members cannot reference class type parameters.


==== tests/cases/compiler/typeParametersInStaticMethods.jump (2 errors) ====
    class foo<T> {
        static M(x: (x: T) => { x: { y: T } }) {
                        ~
!!! error TS2302: Static members cannot reference class type parameters.
                                        ~
!!! error TS2302: Static members cannot reference class type parameters.
        }
    } 